--- a/compose.yml
+++ b/compose.yml
@@ -1,10 +1,10 @@
 services:
-  fastapi:
+  api:
+    image: qrcode-api
     container_name: qrcode-api
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./deployment/Dockerfile
     ports:
-      - "8000:8000"
-    volumes:
-      - .:/app
+      - 9000:8080
+    platform: linux/amd64
