--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v4
 
+      # https://dev.classmethod.jp/articles/allowing-assumerole-only-for-specific-repositories-and-branches-with-oidc-collaboration-between-github-actions-and-aws/
+      # IAMロールは別途作る必要あるかも
       - name: set aws role to assume
         run: |
           if [ "${{ inputs.environment }}" = "production" ]; then
@@ -45,6 +47,9 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push image
         uses: docker/build-push-action@v5
