--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -58,7 +58,7 @@ jobs:
           context: ./
           file: ./deployment/Dockerfile
           push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr_repository }}:${{ github.sha }}
+          tags: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.erc_repository }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           provenance: false
@@ -69,5 +69,5 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          aws lambda update-function-code --function-name ${{ inputs.lambda_function_name }} --image-uri $ECR_REGISTRY/${{ inputs.ecr_repository }}:${{ github.sha }}
+          aws lambda update-function-code --function-name ${{ inputs.lambda_function_name }} --image-uri $ECR_REGISTRY/${{ inputs.erc_repository }}:${{ github.sha }}
           aws lambda wait function-updated --function-name ${{ inputs.lambda_function_name }}
