--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,7 +37,7 @@ jobs:
           else
               echo "AWS_ROLE_ARN=${{ secrets.DEV_AWS_ROLE_ARN }}" >> $GITHUB_ENV
           fi
-
+      # https://dev.classmethod.jp/articles/github-actions-aws-sts-credentials-iamrole/
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -48,6 +48,11 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -55,14 +60,13 @@ jobs:
         uses: docker/build-push-action@v5
         id: build-image
         with:
-          context: ./
+          context: .
           file: ./deployment/Dockerfile
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.erc_repository }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           provenance: false
-          target: main
           platforms: linux/arm64
 
       - name: Deploy to Lambda
