--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -61,7 +61,7 @@ jobs:
         id: build-image
         with:
           context: .
-          file: ./deployment/Dockerfile
+          file: ./.docker/deployment/Dockerfile
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.erc_repository }}:${{ github.sha }}
           cache-from: type=gha
@@ -69,6 +69,7 @@ jobs:
           provenance: false
           platforms: linux/arm64
 
+      #  UpdateFunctionCode、GetFunctionConfigurationをIamRoleに許可する
       - name: Deploy to Lambda
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
