--- a/.github/workflows/depoy_to_development.yml
+++ b/.github/workflows/depoy_to_development.yml
@@ -29,6 +29,9 @@ jobs:
     if: ${{ always() }}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the code
+        uses: actions/checkout@v4
+
       - name: Set Slack Message
         id: set_slack_msg
         run: |
@@ -37,6 +40,7 @@ jobs:
           else
             echo "::set-output name=slack_message::':x: Deployment failed'"
           fi
+
       - name: Slack Notification
         uses: ./.github/workflows/slack_notify.yml
         with:
