--- a/.github/workflows/depoy_to_development.yml
+++ b/.github/workflows/depoy_to_development.yml
@@ -27,27 +27,13 @@ jobs:
     needs: deploy_api
     # deploy_apiが成功していても失敗していても実行されるようにする
     if: ${{ always() }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v4
-
-      - name: Set Slack Message
-        id: set_slack_msg
-        run: |
-          if [[ "${{ needs.deploy_api.result }}" == "success" ]]; then
-            echo "::set-output name=slack_message::':white_check_mark: Deployment successful'"
-          else
-            echo "::set-output name=slack_message::':x: Deployment failed'"
-          fi
-
-      - name: Slack Notification
-        uses: ./.github/workflows/slack_notify.yml
-        with:
-          slack_channel: info-gha
-          # needs.<job_id>.resultで前のジョブの結果を参照できる(success、failure、cancelled、および skipped)
-          slack_color: ${{ needs.deploy_api.result == 'success' && 'good' || 'danger' }}
-          slack_username: GitHub Actions Results
-          slack_icon: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
-          slack_title: Deployment to Development dev-qrcode-generator-lambda
-          slack_message: ${{ steps.set_slack_msg.outputs.slack_message }}
+    uses: ./.github/workflows/slack_notify.yml
+    with:
+      slack_channel: info-gha
+      # needs.<job_id>.resultで前のジョブの結果を参照できる(success、failure、cancelled、および skipped)
+      slack_color: ${{ needs.deploy_api.result == 'success' && 'good' || 'danger' }}
+      slack_username: GitHub Actions Results
+      slack_icon: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
+      slack_title: Deployment to Development dev-qrcode-generator-lambda
+      slack_message: ${{ needs.deploy_api.result == 'success' && ':white_check_mark:Deployment successful' || ':x:Deployment failed' }}
+    secrets: inherit
