--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -63,7 +63,7 @@ jobs:
           context: .
           file: ./.docker/deployment/Dockerfile
           push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.erc_repository }}:${{ github.sha }}
+          tags: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.erc_repository }}/:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           provenance: false
